--- a/app/views/adapters/edit.html.haml
+++ b/app/views/adapters/edit.html.haml
@@ -1,6 +1,7 @@
 .text-center
   %h1.display-5.text-secondary.mb-5 Edit adapter
 
-.row.justify-content-around
-  .col-auto
-    = render 'form', btn_val: "Update"
+.container
+  .row.justify-content-around
+    .col-sm-10.col-md-6
+      = render 'form', btn_val: "Update"
