--- a/app/views/adapters/show.html.haml
+++ b/app/views/adapters/show.html.haml
@@ -5,12 +5,12 @@
   
 .d-flex.justify-content-around
   .d-inline-block
-    %p= @adapter.vendor.name
-    %p= @adapter.adapter_type.name
-    %p= @adapter.connection_type.name
+    %p.h5= @adapter.vendor.name
+    %p.h5= @adapter.adapter_type.name
+    %p.h5= @adapter.connection_type.name
     
-.text-center
-  = link_to 'Home', root_path, class: 'btn btn-primary'
-  = link_to 'Edit', edit_adapter_path(@adapter), class: 'btn btn-secondary'
-  = link_to 'Destroy', adapter_path(@adapter), class: 'btn btn-danger',
+.text-center.mt-4
+  = link_to 'Home', root_path, class: 'btn btn-outline-primary'
+  = link_to 'Edit', edit_adapter_path(@adapter), class: 'btn btn-outline-secondary'
+  = link_to 'Destroy', adapter_path(@adapter), class: 'btn btn-outline-danger',
     data: {method: :delete, confirm: "Are you sure?"}
